# sparrow62-kmk

./: .gitignore  .gitmodules  README.md  backup_keymap.py  boot.py  code.1.py  code.py  joypoint.py  keymap.py  pyproject.toml  sparrow59_backup_keymap.py  sparrow59_code.py  sparrow59_keymap.py  tasks.py
keymaps/74th/: backup_keymap.py  keymap.py
keymaps/default/: backup_keymap.py
keymaps/sparrow62v2/74th/: keymap.py
keymaps/sparrow62v2/default/74th/: keymap.py
keymaps/sparrow62v2/test/: keymap.py
keymaps/test/: keymap.py
testing/sparrow59/: code.py
