[tool.poetry]
name = "sparrow62-kmk"
version = "0.1.0"
description = ""
authors = ["Atsushi Morimoto (74th) <site@74th.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
circuitpython-stubs = "^2019.5.26"
adafruit-circuitpython-mcp230xx = "^2.5.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
